# napcat-sdk

./: .gitignore  .gitmodules  LICENSE  MESSAGE_SEGMENTS.md  README.md  bun-patch.ts  bunfig.toml  index.ts  onebot-request-schema.json  onebot-response-emoji-like.json  onebot-response-group-notice.json  openapi.json  package.json  pyproject.toml  schema.openapi.json  temp_calc_schema.ts  test1.py  tsconfig.json  zensical.toml
.github/workflows/: publish.yml
docs/: mkdocs.yml  pyproject.toml
examples/: forward_ws_connection.py  multi_consumers.py
schemas/: OB11MessageData.schema.json  generated.openapi.json
scripts/: api-codegen.py  extract-api-schema.ts  extract-message-schema.ts  generate-api-schema.ts  generate_client_api.py  generate_client_gen.py  generate_schema.py  m1.ts  main.ts  message-codegen.py  notify-codegen.py  parm-json-schema-generator.ts  schema_to_py_v2.py  test-notice-schema.ts
src/napcat/: __init__.py  client.py  client_api.py  client_gen.py  connection.py  server.py
src/napcat/types/: __init__.py  core.py  events.py  messages.py  responses.py  schemas.py  utils.py
src/napcat/types/events/: __init__.py  base.py  message.py
src/napcat/types/events/notice/: base.py
src/napcat/types/messages/: __init__.py  base.py  dataclass_schemas.py  generated.py  typedict_schemas.py
tests/: smoke_test.py
