[project]
name = "napcat-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "吴天一", email = "faithleysath@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "orjson>=3.11.5",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "napcat"

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "pytest>=9.0.2",
]
