[project]
name = "napcat-sdk"
version = "0.2.8"
description = "NapCat SDK for Python - Fully typed and async ready"
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "吴天一", email = "faithleysath@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["napcat", "sdk", "api", "async", "typed"] # 方便在 PyPI 搜索
# 这里是关键的元数据增强
classifiers = [
    # 开发状态 (3 - Alpha, 4 - Beta, 5 - Production/Stable)
    "Development Status :: 3 - Alpha",
    
    # 受众
    "Intended Audience :: Developers",
    
    # 许可证 (请根据实际情况选择，这里假设是 MIT)
    "License :: OSI Approved :: MIT License",
    
    # 编程语言版本
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    
    # 操作系统
    "Operating System :: OS Independent",
    
    # *** 关键：声明这是一个包含类型注解的包 ***
    "Typing :: Typed",
    
    # 话题
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "websockets>=15.0.1",
]

[project.urls]
"Homepage" = "https://github.com/faithleysath/napcat-sdk"
"Repository" = "https://github.com/faithleysath/napcat-sdk"
"Documentation" = "https://github.com/faithleysath/napcat-sdk/blob/main/README.md"
"Bug Tracker" = "https://github.com/faithleysath/napcat-sdk/issues"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "napcat"

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "pytest>=9.0.2",
]
docs = [
    "zensical>=0.0.16",
]

[tool.datamodel-codegen]
formatters = ["ruff-check", "ruff-format"]
naming-strategy = "full-path"
target-python-version = "3.12"
use-annotated = true
collapse-root-models = true
use-root-model-type-alias = true
use-type-alias = true

[tool.datamodel-codegen.profiles.api-typedict]
input = "openapi.json"
input-file-type = "openapi"
openapi-scopes = ["paths"]
output = "src/napcat/types/schemas.py"
output-model-type = "typing.TypedDict"